--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,20 @@
   "dependencies": {
     "@google/generative-ai": "^0.17.1",
     "@prisma/client": "5.19.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@vercel/blob": "^0.23.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "jsdom": "^25.0.0",
+    "lucide-react": "^0.439.0",
     "next": "14.2.8",
     "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/jsdom": "^21.1.7",
