--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.5.0",
     "@google/generative-ai": "^0.17.1",
     "@hookform/resolvers": "^3.9.0",
-    "@prisma/client": "5.19.1",
+    "@prisma/client": "^5.19.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -29,6 +30,7 @@
     "jsdom": "^25.0.0",
     "lucide-react": "^0.439.0",
     "next": "14.2.8",
+    "next-auth": "^5.0.0-beta.21",
     "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
