--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
-DATABASE_URL=
-DIRECT_URL=
+DATABASE_URL="postgres://postgres:development@localhost:5432/dev-db"
+DIRECT_URL="postgres://postgres:development@localhost:5432/dev-db"
 BLOB_READ_WRITE_TOKEN=
 GOOGLE_API_KEY=
 AUTH_SECRET=
