--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.0.2",
     "@types/canvas-confetti": "^1.6.4",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^20",
