--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,8 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@upstash/ratelimit": "^2.0.3",
+    "@upstash/redis": "^1.34.0",
     "@vercel/blob": "^0.23.4",
     "axios": "^1.7.7",
     "canvas-confetti": "^1.9.3",
